syntax = "proto3";

option go_package = "protobuf/compiled";

import "google/protobuf/empty.proto";
import "validate/validate.proto";

service UserService {
  rpc GetUserById (User) returns (User) {}
  rpc GetUserList (google.protobuf.Empty) returns(UserList) {}
  rpc CreateUser (User) returns (Response) {}
  rpc UpdateUser (User) returns (Response) {}
  rpc DeleteUser (User) returns (Response) {}
}

message User {
  optional string id = 1  [(validate.rules).string.uuid = true];
  optional string email = 2 [(validate.rules).string.email = true];
  optional string username = 3 [(validate.rules).string.min_len = 3, (validate.rules).string.max_len = 255];
  optional string password = 4 [(validate.rules).string.min_len = 6, (validate.rules).string.max_len = 255];
  optional bool admin = 5;
}

message UserList {
  repeated User users = 1 ;
}

message Status {
  int32 code = 1 [(validate.rules).int32.lte = 999];
  string message = 2;
  bool error = 3;
}

message Response {
  oneof response {
    User user = 1;
    Status status = 2;
  }
}